fix: replace Thread.ofVirtual() with new Thread() for Java 17 compat
Thread.ofVirtual() requires Java 21; the project targets Java 17.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>